Code cleanup - generics